assets/css/scss/templates/_front-page.scss
/* ==========================================================================
  #FRONT PAGE TEMPLATE
  ========================================================================== */

.frontpage-section:first-of-type {
	padding-top: add-unit($space-quintuple, 'em');
}

.frontpage-section:first-of-type::before {
	display: none;
}

.frontpage-section {
	margin: 0;
	padding: add-unit($space-triple, 'em') 0;

	> .entry-content {
		> :first-child {
			margin-top: 0;
		}
	}

	.entry-content.-large-portrait-featured-image-template {
		max-width: 100%;

		.wp-post-image.full-bleed-img {
			width: 100%;
		}

		> :first-child,
		> div > :first-child {
			margin-top: 0;
		}
	}

	> article:first-child {
		margin: 0;
	}

	&::before {
		background: #444;
		content: '';
		display: block;
		height: 4px;
		margin: 0 auto;
		position: relative;
		top: -#{add-unit($space, 'em')};
		width: 100px;
	}

	@media screen and (min-width: 50em) {
		@include line-height-and-spaces(1.5);

		padding: add-unit($space-triple, 'em') 0;

		> .entry-content {
			margin-top: add-unit($space-double, 'em');
		}

		&:first-of-type {
			padding-top: add-unit($space-quintuple, 'em');
		}

		&::before {
			top: -#{add-unit($space, 'em')};
		}

		@include line-height-and-spaces(1.4);
	}

	@media screen and (min-width: 80em) {
		.entry-content.-large-portrait-featured-image-template > div > * {
			margin-left: 0;
			max-width: 800px;
			padding-left: 0;
		}
	}
}

.frontpage-section-title {
	font-size: 1.802em;
	line-height: line-height(1.802, 1.5);
	max-width: $layout-max-width;
	margin: 0 auto;
	@include padding-left-and-right($space);
	text-align: center;

	+ * {
		margin-top: add-unit($space-double, 'em');
	}

	@media screen and (min-width: 40em) {
		@include padding-left-and-right($space-and-half);
	}

	@media screen and (min-width: 45em) {
		font-size: 2.281em;
		line-height: line-height(2.281, 2);
		@include padding-left-and-right($space-double);
	}

	@media screen and (min-width: 50em) {
		@include line-height-and-spaces(1.5);

		line-height: line-height(1.802, $space);

		@include line-height-and-spaces(1.4);
	}
}

.latest-blog-posts-section {
	.post:first-of-type {
		margin-top: add-unit($space-double, 'em');
	}

	> p {
		margin-top: add-unit($space-double, 'em');
		text-align: center;
	}

	@media screen and (min-width: 50em) {
		@include line-height-and-spaces(1.5);

		.post:first-of-type,
		> p {
			margin-top: add-unit($space-double, 'em');
		}

		@include line-height-and-spaces(1.4);
	}
}

